--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next -p 3001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "check-format": "prettier --check .",
-    "format": "prettier --write .",
-    "test-all": "yarn check-format && yarn lint && yarn build",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "1.6.1",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "7.2.4"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.0",
-    "prettier": "^2.3.2"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next -p 3001",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format:check": "prettier --ignore-path .gitignore --check .",
+        "format": "prettier --ignore-path .gitignore --write .",
+        "test-all": "yarn check-format && yarn lint && yarn build",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "1.6.1",
+        "next": "latest",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "7.2.4"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-next": "^11.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "husky": "^7.0.0",
+        "prettier": "^2.3.2"
+    }
 }
