--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "1.6.1",
+        "bcryptjs": "^2.4.3",
+        "mongodb": "^4.1.0",
         "next": "latest",
+        "next-auth": "^3.27.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "7.2.4"
