--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "format": "prettier --ignore-path .gitignore -w .",
         "format:check": "prettier --ignore-path .gitignore --check .",
-        "format": "prettier --ignore-path .gitignore --write .",
         "test:all": "yarn format:check && yarn lint && yarn build",
         "prepare": "husky install"
     },
@@ -19,6 +19,7 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "cypress": "^8.3.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-next": "^11.0.1",
