--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,15 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "jest": true
+        "node": true
     },
-    "extends": ["next", "airbnb", "prettier"],
+    "extends": [
+        "airbnb",
+        "prettier",
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:cypress/recommended"
+    ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -12,7 +18,7 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": ["prettier"],
+    "plugins": ["react", "prettier", "cypress"],
     "rules": {
         "prettier/prettier": "error",
         "react/react-in-jsx-scope": "off",
