--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
         "dev": "next -p 3001",
         "build": "next build",
         "start": "next start",
+        "start:test": "NODE_ENV=test next start -p 3001",
         "lint": "next lint",
         "format": "prettier --ignore-path .gitignore -w .",
         "format:check": "prettier --ignore-path .gitignore --check .",
-        "test:all": "yarn format:check && yarn lint && yarn build",
+        "test": "cypress run",
+        "cypress:open": "cypress open",
         "prepare": "husky install"
     },
     "dependencies": {
@@ -24,7 +26,8 @@
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-next": "^11.0.1",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-cypress": "^2.11.3",
+        "eslint-plugin-import": "^2.24.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.24.0",
