--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # testing
 /coverage
+.nyc_output
 
 # next.js
 /.next/
@@ -22,6 +23,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# lock
+yarn.lock
+package-lock.json
 
 # local env files
 .env.local
