--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
         "dev": "next -p 3001",
         "build": "next build",
         "start": "next start",
-        "start:test": "NODE_ENV=test next start -p 3001",
         "lint": "next lint",
         "format": "prettier --ignore-path .gitignore -w .",
         "format:check": "prettier --ignore-path .gitignore --check .",
         "test": "cypress run",
-        "cypress:open": "cypress open",
+        "test:e2e": "start-test dev 3001 test",
+        "cy:open": "cypress open",
+        "coverage:open": "open coverage/lcov-report/index.html",
         "prepare": "husky install"
     },
     "dependencies": {
+        "@cypress/code-coverage": "^3.9.10",
         "@reduxjs/toolkit": "1.6.1",
         "next": "latest",
         "react": "^17.0.2",
@@ -21,6 +23,7 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "babel-plugin-istanbul": "^6.0.0",
         "cypress": "^8.3.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
@@ -31,6 +34,12 @@
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "husky": "^7.0.1",
-        "prettier": "^2.3.2"
+        "prettier": "^2.3.2",
+        "start-server-and-test": "^1.13.1"
+    },
+    "nyc": {
+        "exclude": [
+            "pages/api/__coverage__.js"
+        ]
     }
 }
