--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
+    "env": {
+        "production": {
+            "plugins": [
+                [
+                    "babel-plugin-jsx-remove-data-test-id",
+                    {
+                        "attributes": ["data-test-id", "data-testid", "data-cy"]
+                    }
+                ]
+            ]
+        }
+    },
     "presets": ["next/babel"],
     "plugins": ["istanbul"]
 }
