--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "license": "MIT",
     "devDependencies": {
         "babel-plugin-istanbul": "^6.0.0",
+        "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
         "cypress": "^8.3.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-next": "^11.1.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-chai-friendly": "^0.7.2",
         "eslint-plugin-cypress": "^2.11.3",
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.24.0",
