--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
     },
     "extends": [
         "airbnb",
+        "airbnb/hooks",
         "prettier",
+        "plugin:prettier/recommended",
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:cypress/recommended",
